plugins {
    id 'checkstyle'
    alias libs.plugins.gitVersion
    id 'idea'
    id 'java'
    alias libs.plugins.mavenPublish
    id 'net.fabricmc.fabric-loom'
    id 'net.neoforged.moddev'
    alias libs.plugins.shadow
}

def git = versionDetails()
def tag = git.lastTag.substring(1)
if (System.getenv('GITHUB_ACTIONS') == 'true') {
    if (System.getenv('GITHUB_WORKFLOW') == 'Release') {
        version = tag
    } else if (System.getenv('PULL_REQUEST')) {
        version = "${tag}${tag.contains('-') ? '.' : '-'}SNAPSHOT.pr.${System.getenv('PULL_REQUEST')}.${System.getenv('GITHUB_RUN_NUMBER')}"
    } else {
        version = "${tag}${tag.contains('-') ? '.' : '-'}SNAPSHOT.${System.getenv('GITHUB_RUN_NUMBER')}"
    }
} else {
    version = "${tag}${tag.contains('-') ? '.' : '-'}SNAPSHOT"
}

group = 'org.mcaccess'
base.archivesName = 'minecraft-access'

loom {
    runs {
        remove client
        remove server
    }

    nestJars tasks.named('shadowJar', Jar), processIncludeJars.outputDirectory.asFileTree
}

dependencies {
    minecraft libs.minecraft
    compileOnly libs.fabricLoader
    compileOnly libs.neoForge
    compileOnly libs.neoforgeFancymodloaderLoader

    compileOnly libs.modMenu
    compileOnly libs.jadeFabric
    compileOnly libs.balmCommon
    compileOnly libs.balmFabric
    compileOnly libs.balmNeoForge
    compileOnly libs.clothConfigCommon
    implementation libs.tolk
    shadow libs.tolk

    include libs.fabricApi
    include libs.balmFabric
    include libs.clothConfigFabric

    jarJar libs.balmNeoForge
    jarJar libs.clothConfigNeoForge

    compileOnly libs.jsr305

    compileOnly libs.lombok
    annotationProcessor libs.lombok

    testImplementation libs.junitJupiter
    testImplementation libs.junitJupiterParams
    testRuntimeOnly libs.junitPlatformLauncher

    testImplementation libs.assertjCore

    testImplementation libs.mockitoCore
    testImplementation libs.mockitoJunitJupiter

    testCompileOnly libs.jsr305

    testCompileOnly libs.lombok
    testAnnotationProcessor libs.lombok

    checkstyle libs.checkstyle
}

compileJava {
    options.encoding = 'UTF-8'
    options.release = 25
}

jar.enabled false
shadowJar {
    archiveClassifier = null
    configurations = [project.configurations.shadow]
    from tasks.jarJar
}

processResources {
    def modVersion = project.version.toString()
    inputs.property 'version', modVersion

    def minecraftVersion = libs.minecraft.get().version
    def minecraftVersionMatch = minecraftVersion =~ /^(\d+)\.(\d+)/
    assert minecraftVersionMatch.find(): "Unsupported Minecraft version format: ${minecraftVersion}"

    def minecraftMajorMinor = "${minecraftVersionMatch.group(1)}.${minecraftVersionMatch.group(2)}"
    def nextMinecraftMinor = "${minecraftVersionMatch.group(1)}.${minecraftVersionMatch.group(2).toInteger() + 1}"

    filesMatching(['fabric.mod.json', 'META-INF/neoforge.mods.toml']) {
        expand(
                version: modVersion,
                fabric_loader_version: libs.fabricLoader.get().version,
                fabric_api_version: libs.fabricApi.get().version,
                balm_version: libs.balmCommon.get().version.split('\\+')[0],
                jade_fabric_version: libs.jadeFabric.get().version,
                jade_neoforge_version: libs.jadeNeoForge.get().version,
                cloth_config_version: libs.clothConfigCommon.get().version,
                fabric_minecraft_version_range: "~${minecraftMajorMinor}",
                neoforge_version: libs.neoForge.get().version,
                neoforge_minecraft_version_range: "[${minecraftMajorMinor}-,${nextMinecraftMinor})",
        )
    }
}

java {
    withSourcesJar()
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

checkstyle {
    toolVersion = libs.checkstyle.get().version
}

test {
    useJUnitPlatform()
    jvmArgs('-XX:+EnableDynamicAgentLoading')
}

javadoc {
    include 'org/mcaccess/minecraftaccess/api/**'
    title = "Minecraft Access ${rootProject.version} API"
    options {
        tags(
                'apiNote:a:API Note:',
                'implSpec:a:Implementation Requirements:',
                'implNote:a:Implementation Note:',
        )
        keyWords true
        linkSource true
        links(
                'https://javadoc.io/doc/org.jetbrains/annotations/latest/',
        )
    }
}

mavenPublishing {
    publishToMavenCentral()
    signAllPublications()
    coordinates project.group, base.archivesName.get(), rootProject.version
    pom {
        name = 'Minecraft Access'
        description = 'A mod for minecraft java (fabric/neoforge) that specifically helps visually impaired players play Minecraft.'
        url = 'https://mcaccess.org/'
        inceptionYear = '2022'
        licenses {
            license {
                name = 'GPL-3.0-only'
                url = 'https://www.gnu.org/licenses/gpl-3.0.en.html'
            }
        }
        organization {
            name = 'Minecraft Access'
            url = 'https://github.com/minecraft-access'
        }
        developers {
            developer {
                id = 'khanshoaib3'
                name = 'Shoaib'
                url = 'https://github.com/khanshoaib3'
                roles = [
                        'Owner',
                ]
            }
            developer {
                id = 'sgmedev'
                name = 'Joel Hooimeyer'
                email = 'me@sgme.dev'
                url = 'https://github.com/sgmedev'
                timezone = 'Australia/Sydney'
                roles = [
                        'Maintainer',
                ]
            }
            developer {
                id = 'BrailleBennett'
                name = 'Braille Bennett'
                url = 'https://github.com/BrailleBennett'
                timezone = 'America/Chicago'
            }
        }
        contributors {
            contributor {
                name = 'Boholder'
                url = 'https://github.com/boholder'
            }
            contributor {
                name = 'Molitvan'
                url = 'https://github.com/Molitvan'
            }
            contributor {
                name = 'emassey0135'
                url = 'https://github.com/emassey0135'
            }
        }
        issueManagement {
            system = 'GitHub'
            url = 'https://github.com/minecraft-access/minecraft-access/issues'
        }
        ciManagement {
            system = 'GitHub Actions'
            url = 'https://github.com/minecraft-access/minecraft-access/actions'
        }
        scm {
            connection = 'scm:git:https://github.com/minecraft-access/minecraft-access'
            developerConnection = 'scm:git:git@github.com:minecraft-access/minecraft-access'
            url = 'https://github.com/minecraft-access/minecraft-access'
        }
    }
}
